fixed the margin gap

--- a/src/contact.css
+++ b/src/contact.css
@@ -31,14 +31,14 @@ box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
 border-radius: 8px;
 }
 
-#sendit{
+#btn__submit{
     background-color: #1570EF;
     width: 100%;
     color: white;
     margin-bottom: 200px;
 }
 
-#sendit:disabled{
+#btn__submit:disabled{
     background: #B2DDFF;
 /* Primary/200 */
 
@@ -48,7 +48,7 @@ border: 1px solid #B2DDFF;
 box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
 border-radius: 8px;
 }
-#sendit:focus{
+#btn__submit:focus{
     background: #1570EF;
 /* Primary/600 */
 
@@ -56,7 +56,7 @@ border: 1px solid #1570EF;
 box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05), 0px 0px 0px 4px #D1E9FF;
 border-radius: 8px;
 }
-#sendit:hover{
+#btn__submit:hover{
     background: #175CD3;
 /* Primary/700 */
 
